--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,9 +1,9 @@
 APP_NAME="Laravel Livewire"
 APP_ENV=local
-APP_KEY=base64:MkOKdoKWcChWMJlipLOVKC/cPxdzAvsx+ReBgKeIwSQ=
+APP_KEY=base64:ASbSCZzxBrNtuw8uJQUI4O3ylCqCtB2L/Iyc3GcDMYI=
 APP_DEBUG=true
 APP_DOMAIN=novaardiansyah.my.id
-APP_URL=http://localhost
+APP_URL="https://laravel-livewire.${APP_DOMAIN}"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +13,7 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=
-DB_USERNAME=root
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -31,20 +31,16 @@ REDIS_PORT=6379
 
 MAIL_MAILER="smtp"
 MAIL_HOST=
-MAIL_PORT="587"
+MAIL_PORT=
+MAIL_USERNAME="no-reply@${APP_DOMAIN}"
+MAIL_PASSWORD=
+MAIL_REPLY_ADDRESS="admin@${APP_DOMAIN}"
+MAIL_REPLY_PASSWORD=
 MAIL_ENCRYPTION="tls"
 MAIL_FROM_ADDRESS="no-reply@${APP_DOMAIN}"
 MAIL_FROM_NAME="@${APP_DOMAIN}"
-
-# * Default sender
-MAIL_USERNAME="no-reply@${APP_DOMAIN}"
-MAIL_PASSWORD=
-
-MAIL_REPLY_ADDRESS="admin@${APP_DOMAIN}"
-MAIL_REPLY_PASSWORD=
-
 MAIL_CC_ADDRESS="auto-forward@${APP_DOMAIN}"
-MAIL_PUBLIC_ADDRESS="novaardiansyah78@gmail.com"
+MAIL_PUBLIC_ADDRESS=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
