--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_DOMAIN=novaardiansyah.my.id
 APP_URL="https://laravel-livewire.${APP_DOMAIN}"
 
+LIVEWIRE_APP_PATH="/laravel-livewire.${APP_DOMAIN}/livewire"
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
